--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Andre Ganske
 email: andre.g.ganske@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Passionate about people, design, technology and building thing | Scrum Master at Zup Innovation
+  Passionate about people, design, technology and building thing | Team Leader at Zup Innovation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andreganske.com.br" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: andreganske
