--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Passionate about people, design, technology and building thing | Team Leader at Zup Innovation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andreganske.com.br" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: andreganske
 github_username:  andreganske
 linkedin_username: andreganske
+instagram_username: aganske
 
 google_analytics: UA-42747997-3
 
