--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,9 @@ defaults:
        layout: "post"
        permalink: /:year/:month/:day/:title
 
+header_pages:
+  - about.md
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
